# djpwr-models

./: LICENSE  README.md  pyproject.toml  setup.py
djpwr_models/: __init__.py  fields.py  managers.py  models.py  settings.py
djpwr_models/queries/: __init__.py  pages.py
